--- a/css/techfolio-theme/lime.css
+++ b/css/techfolio-theme/lime.css
@@ -1,5 +1,5 @@
 /* Lime Theme: modifies the default theme to inject a wee bit o' green in various places. */
-
+techfolio-theme: lime.css
 /* Use Open Sans as the default font. */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700|Source+Code+Pro:300,400,500,700");
 
